--- a/chatroom-frontend/package.json
+++ b/chatroom-frontend/package.json
@@ -35,6 +35,8 @@
     "@vue/eslint-config-typescript": "^14.5.1",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "electron": "^38.1.0",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.29.0",
     "eslint-plugin-vue": "~10.2.0",
     "jiti": "^2.4.2",
@@ -44,6 +46,7 @@
     "sass-embedded": "^1.89.2",
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
+    "vite-plugin-electron": "^0.29.0",
     "vite-plugin-vue-devtools": "^7.7.7",
     "vitest": "^3.2.4",
     "vue-tsc": "^2.2.12"
